# cuda-oxide-bench

./: .gitignore  AGENTS.md  BACKLOG.md  METHODOLOGY.md  README.md  SETUP.md  SUMMARY.md
analysis/: ptx-stats.txt
cublas-attn-gqa/: .gitignore  ANALYSIS.md  Makefile  attn_gqa.cu  results.csv  softmax.cu
cublas-half-precision/: ANALYSIS.md
cublas-matmul/: results.csv
cuda-attn-gdn/: Makefile
cuda-attn-gdn-async-tpb128/: .gitignore  ANALYSIS.md  Makefile  attn_gdn_async_tpb128.cu  bench.cu  run.sh
cuda-attn-gdn-tma/: Makefile  SWEEP_W22_15.md  attn_gdn_tma.cu  bench_sweep.cu  results_sweep.csv
cuda-attn-gdn-tma-warpspec/: .gitignore  ANALYSIS.md  Makefile  attn_gdn_tma_warpspec.cu  bench.cu  run.sh
cuda-attn-gqa/: ANALYSIS.md  Makefile  attn_gqa.cu  results.csv
cuda-attn-kda/: ANALYSIS.md  Makefile  attn_kda.cu  attn_kda.sass  bench.cu  results.csv  results_large.csv  run.sh
cuda-attn-mla/: .gitignore  Makefile  bench.cu
cuda-attn-mla-tma/: Makefile  attn_mla_tma.cu  attn_mla_tma.sass  run.sh
cuda-matmul/: .gitignore  ANALYSIS.md  matmul.cu  matmul.ptx  results.csv
cuda-matmul-tc-bf16/: .gitignore  ANALYSIS.md  Makefile  matmul_tc_bf16.cu  run.sh
cuda-matmul-tiled/: ANALYSIS.md  matmul.cu  matmul.ptx  results.csv
cuda-reduction/: ANALYSIS.md  reduce.cu  results.csv
cuda-vecadd-bench/: results.csv
cutile-attn-gdn/: main.py  results_w22-rerun.csv
cutile-attn-gdn-tma/: ANALYSIS.md  main.py  results_rerun_a.csv  results_rerun_b.csv  results_tma_off_qwen3_next_decode.csv  results_tma_on_large.csv  results_tma_on_qwen3_next_decode.csv  run.sh  sass_tma_off_qwen3_next_decode.sass
cutile-attn-gqa/: .gitignore  ANALYSIS.md  gqa_fwd_fused.sass  main.py  results.csv  run.sh
cutile-attn-mla-tma/: ANALYSIS.md  elf_latNone_on.txt  export_latnone.py  isolation_test.py  main.py  r1.csv  r2.csv  r3.csv  results_order_off_first.csv  results_order_on_second.csv  run.sh  (+5 more)
oxide-attn-gdn-tma/: ANALYSIS.md  Cargo.toml  oxide_attn_gdn_tma.ll  oxide_attn_gdn_tma.ltoir  oxide_attn_gdn_tma.sass  results.csv  run.sh
oxide-attn-gdn-tma/src/: main.rs
oxide-attn-mla-tma/: .gitignore  ANALYSIS.md  Cargo.toml  results.csv  run.sh
oxide-attn-mla-tma/src/: main.rs
oxide-tcgen05-matmul/: .gitignore  ANALYSIS.md  Cargo.toml  README.md  oxide_tcgen05_matmul.ptx  tcgen05_matmul.ptx
oxide-tcgen05-matmul/src/: main.rs
oxide-tma-copy/: ANALYSIS.md  Cargo.toml  README.md  oxide_tma_copy.ll  oxide_tma_copy.ptx
oxide-tma-copy/src/: main.rs
(+168 files in other folders)
